fix: add correct api endpoint params
